istio-manifests/testservice-gateway.yaml
# jw

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testservice-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testservice-ingress
spec:
  hosts:
  - "*"
  gateways:
  - testservice-gateway
  http:
  - route:
    - destination:
        host: testservice
        port:
          number: 80
